[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jinpress"
version = "1.0.0"
description = "A fast, lightweight, and elegantly configured Python static site generator inspired by VitePress"
readme = "README.md"
license = "MIT"
authors = [
    {name = "JinPress Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "minijinja>=1.0.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0.0",
    "watchdog>=3.0.0",
    "livereload>=2.6.0",
    "pygments>=2.15.0",
    "mdit-py-plugins>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
jinpress = "jinpress.cli:main"

[project.urls]
Homepage = "https://github.com/jinpress/jinpress"
Documentation = "https://jinpress.github.io"
Repository = "https://github.com/jinpress/jinpress"
Issues = "https://github.com/jinpress/jinpress/issues"

[tool.hatch.build.targets.wheel]
packages = ["jinpress"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
